# tc-ninja

./: .gitignore  README.md
.github/workflows/: update_terms.yml
backend/: main.py  prompts.py  pyproject.toml  requirements.txt
backend/tests/: test_api.py
database/: schema.sql
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/config/: shared.json
frontend/locales/: en.ts  es.ts  index.ts
frontend/tests/: i18n.test.ts  page.test.tsx  platforms.test.ts
scripts/: pyproject.toml  requirements.txt  update_terms.py
